Building some more features on human resourses page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-wild-oasis",
+  "name": "preskool-managment-system",
   "private": true,
   "version": "0.0.0",
   "type": "module",
