--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.8",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
-    "nanoid": "^5.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
